2013-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make disabled forms not editable.  [emacs-w3m:12146]

	* w3m.el (w3m-use-filter): Default to t.
	(w3m-show-form-hint): Notice form is inactive.

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly): New function
	that substitutes the `disabled' attribute with the `readonly' attribute
	in an html source so as to enable w3m to handle.
	(w3m-filter-configuration): Add it.

	* w3m-form.el (w3m-form-inactive): New face.
	(w3m-fontify-textareas, w3m-form-parse-and-fontify): Use it if text is
	not editable.
	(w3m-form-input): Use w3m-message rather than message.
	(w3m-form-input-textarea): Don't allow editing text if it is disabled.
	(w3m-form-last-position): New variable.
	(w3m-form-restore-last-position): New function.
	(w3m-form-submit): Add it to w3m-fontify-after-hook.

2013-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-input-url): Default to `default' or "".
	(w3m-download): Prompt for url endlessly instead of bugging out.
	(w3m): Doc fix.

2013-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-completion-map): New overriding keymap.
	(w3m-input-url): Use it.
	Suggested by Manuel Giraud <manuel@ledu-giraud.fr>.

2013-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-toolbar-make-buttons): Make tool-bar button use
	a single icon image if Emacs built with Gtk+ is running.
	cf. <http://thread.gmane.org/gmane.emacs.bugs/78021>
	(w3m-toolbar-use-single-image-per-icon): Add a note to docstring.

2013-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-decode-coding-string-with-priority):
	Move from w3m-ems.el and w3m-xmas.el.
	* w3m-ems.el, w3m-xmas.el
	(w3m-decode-coding-string-with-priority): Move to w3m-util.el.
	* w3m-proc.el: Don't Fbind it.

	* w3mhack.el (w3mhack-make-package):
	Avoid making a hard link for w3m-load.el twice.

2013-09-03  Manuel Giraud  <manuel@ledu-giraud.fr>

	* w3m.el (w3m-canonicalize-url): Do uri replace before normal parsing.
